# Genealogy-

./: .gitignore  AGENTS.md  GENEALOGY_WIKI.md  README.md  collections.html  graph.html  index.html  people.html  pyproject.toml  research.html  sources.html  timeline.html  tree.html
assets/: app.js  site-data.js  styles.css
docs/: agent_handoff.md  archive_pipeline_automation.md  genealogy-system-pipeline.md  genealogy_wiki_strategy.md  implementation-flow.md  internal_research_agents_pc_off.md  photo_face_workflow.md  pipeline_references.md  post_conversion_agent_workflow.md  post_conversion_autopilot.md  refinement_contract.md  resumable_conversion_pipeline.md  source-prep-free-local-probe.json  source-prep-free-local-probe.md  visual_extraction_contract.md  wiki_site.md
raw/: r2-derived-assets.json  r2-raw-sources.json  r2-storage.json  source-prep-manifest.json
research/: 00 Research Start.md  Conversion Dashboard.md  Post-Conversion Dashboard.md  System Dashboard.md  conversion-qa-next.md  conversion-qa-unblock-plan.md  external-research-requests.md  final-site-status.md  index.md  log.md  page-upgrades.md  r2-intake-candidates.md  r2-source-intake-preflight.md  research-leads.md  research-plan.md  source-usability.md  staging-backlog.md  staging-opportunities.md  storage-lifecycle.md  wiki-product-log.md
scripts/: build-wiki-site-worker.mjs  post-conversion-agent-controller.ps1  source-prep-parallel-controller.ps1  sync-github-database.ps1
site/: agent-workflows.html  family-tree.html  index.html  search-index.json  search.html  site-manifest.json
(+69239 files in other folders)
